<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sQuiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Log In</string>
    <string name="example_nelson_mandella">Example: Nelson Mandella</string>
    <string name="example_nelson_gmail_com">Example: Nelson@gmail.com</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="accountType">Select account type</string>
    <string name="instructor">Instructor</string>
    <string name="student">Student</string>
    <string name="squiz">sQuiz</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="quizzes">Quizzes</string>
    <string name="dialog_title">View</string>
    <string name="view">View</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="example_my_group">Example: My Group</string>
    <string name="action_delete">Delete</string>
    <string name="example_add_student">Example: student@example.com</string>
    <string name="number_of_re_arrangement_questions">Number of Re-arrangement questions</string>
    <string name="example_5">Example: 5</string>
    <string name="quiz_name">Quiz name</string>
    <string name="example_design_patterns">Example: Design patterns</string>
    <string name="subject">Subject</string>
    <string name="example_software_engineering">Example: Software engineering</string>
    <string name="number_of_multiple_choice_questions">Number of Multiple choice questions</string>
    <string name="duration">Duration</string>
    <string name="example_15">Example: 15</string>
    <string name="next">Next</string>
    <string name="question_title">Question title</string>
    <string name="example_arrange_in_ascending_order">Example: Arrange in ascending order</string>
    <string name="re_arrangement_options">Re-arrangement options</string>
    <string name="example_a_4">Example: a)4</string>
    <string name="example_b_5">Example: b)5</string>
    <string name="example_c_6">Example: c)6</string>
    <string name="example_d_7">Example: d)7</string>
    <string name="question_answer">Question answer</string>
    <string name="example_b_c_d_a">Example: b-c-d-a</string>
    <string name="first_choice">First choice</string>
    <string name="second_choice">Second choice</string>
    <string name="third_choice">Third choice</string>
    <string name="fourth_choice">Fourth choice</string>
    <string name="example_who_is_the_first_programmer">Example: Who is the first programmer?</string>
    <string name="multiple_choices">Multiple choices</string>
    <string name="create">Create</string>
    <string name="submit">Submit</string>
    <string name="_a_">"(a) "</string>
    <string name="_b_">"(b) "</string>
    <string name="_c_">"(c) "</string>
    <string name="_d_">"(d) "</string>
    <string name="your_answer_">Your answer:</string>
    <string name="right_answer_">"Right answer: "</string>
    <string name="publish">Publish</string>
    <string name="publish_title">Publish to</string>
    <string name="time">05:00</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="tableRows">CreateTableRows Dynamically CoderzHeaven.com</string>
    <string name="title_activity_view_quiz_questions">ViewQuizQuestions</string>
    <string name="action_settings">Settings</string>

</resources>
