<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/question_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/_a_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/TextViewFirstChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/first_choice"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/_b_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/TextViewSecondChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/second_choice"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/_c_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/TextViewThirdChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/third_choice"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/_d_"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/TextViewFourthChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/fourth_choice"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <TextView
            android:id="@+id/QuestionRearrangementAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/your_answer_"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/rightAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/example_b_c_d_a" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/submit"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>